--- a/site/home.html
+++ b/site/home.html
@@ -1,6 +1,6 @@
 <header class="page-header" role="banner">
   <h1 class="logo"><img src="site/img/logo-full.svg" alt="Google Cloud Platform" /></h1>
-  <div language-switcher></div>
+  <div language-switcher class="language-switcher--home"></div>
 </header><!-- end of .page-header -->
 
 <article class="main" role="main">
